<resources>
    <string name="app_name">E-commerceWithApi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">"Or Login With "</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="name">Name</string>
    <string name="re_enter_your_password">Re_Enter your Password</string>
    <string name="loading">Loading</string>
    <string name="enter_your_name">Enter your name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="your_location">Your Location</string>
    <string name="search_product">Search Product</string>
    <string name="category">Category</string>
    <string name="see_all">See all</string>
    <string name="blue_beanies">Blue Beanies</string>
    <string name="_50_25">$50,25</string>
    <string name="offer">%21 off</string>
    <string name="_0_4">0.4</string>
    <string name="product_details">Product Details</string>
    <string name="textview">TextView</string>
    <string name="color">Color</string>
    <string name="icon_add">+</string>
    <string name="decrease">-</string>
    <string name="qty">Qty:</string>
    <string name="size">Size</string>
    <string name="s">s</string>
    <string name="_1">1</string>
    <string name="did_the_item_fit_well">Did the item fit well?</string>
    <string name="reviews">Reviews</string>
    <string name="_4">(4)</string>
    <string name="test_review">This t-shirt caught my eye instantly! The design is both stylish and unique, making it stand out effortlessly.</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="home">Home</string>
    <string name="change">Change</string>
    <string name="order_list">Order List</string>
    <string name="delete">delete</string>
    <string name="your_cart_is_empty_now">Your cart is empty now.</string>
    <string name="shop_and_explore">Shop and explore.</string>
    <string name="the_best_things_start_with_a_single_choice">the best things start with a single choice!</string>
    <string name="enter_cupon_code">Enter Cupon Code</string>
    <string name="apply">Apply</string>
    <string name="items">Items</string>
    <string name="shipping">Shipping</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="price">0</string>
    <string name="_40">40</string>
    <string name="ttotal_cost">Total Cost</string>
    <string name="check_out">Check Out</string>
    <string name="fragment_home">fragment_home</string>
    <string name="wish">Wish</string>
    <string name="cart">Cart</string>
    <string name="Account">Account</string>
</resources>