<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/backgroud_signup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/container_auth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/guideline4">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/create_your_account"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textViewName"
                    style="@style/titleStyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name_signUp"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/container_eidt_text"
                    android:hint="@string/enter_your_email"
                    android:inputType=""
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textViewPassword"
                    style="@style/titleStyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password_signUp"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/container_eidt_text"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textViewEmail"
                    style="@style/titleStyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_SignUp"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/container_eidt_text"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/titleStyleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/re_enter_your_password"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_re_enter_your_password_login"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/container_eidt_text"
                    android:hint="@string/re_enter_your_password"
                    android:inputType="textPassword"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_signUp"
                    style="@style/titleStyleText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/style_button"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".30" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".10" />


            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/line4"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


